recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:7: error: type mismatch;
 found   : Double
 required: Int
  carre(xpos, ypos, 100.0);
        ^FourSquare:7: error: type mismatch;
 found   : Double
 required: Int
  carre(xpos, ypos, 100.0);
              ^