recursion.logo.square.FourSquare.scala.code
override def run() {
  
  val xpos = getX();
  val ypos = getY();
  
  
  carre(xpos, ypos, 100.0);
  
  
}


def carre(fromx:Int, fromy:Int, taille:Double) = {
  setX(fromx); setY(fromy);
  setCap(90);
  
  avance(100);
  droite(90);
  avance(100);
  droite(90);
  avance(100);
  droite(90);
  avance(100);
  
}